src/test/deca/context/invalid/langage_essentiel/troisieme_passe/regle_3_67.deca
// Description:
//    regle 3.67 à 3.69
//
// Resultats:
//    Ligne 11: 'f' must be a field, a parameter or a variable, but it is a method.
class A {
    int f() {
    return 1;
    }
    void g(){
        f = 1;
    }
}